# mirageml_pip

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-cached-python/: action.yml
.github/workflows/: check-lint.yml  python-publish.yml  update-version.yml
mirageml/: __main__.py  constants.py
mirageml/classes/: __init__.py  login_manager.py  notion.py
mirageml/commands/: __init__.py  add.py  add_model.py  add_plugin.py  add_source.py  add_system_prompt.py  brain.py  chat.py  config.py  delete_source.py  delete_system_prompt.py  gmail_chat.py  list_models.py  list_plugins.py  list_sources.py  list_system_prompts.py  login.py  profile.py  rag.py  signup.py  sync_plugin.py  tutorial.py  vectordb.py  web_source.py
mirageml/commands/utils/: __init__.py  brain.py  codeblocks.py  custom_inputs.py  keybindings.py  llm.py  local_source.py  multiline.py  prompt_templates.py  type_check.py  vectordb.py  web_source.py
mirageml/index_handlers/: __init__.py  index_notion.py
mirageml/utils/: __init__.py  progress_print.py
mirageml_pip/: __main__.py
mirageml_pip/commands/: __init__.py  hello.py
mirageml_version/: __init__.py  _version_generated.py
