[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120

[tool.ruff]
exclude = ['.venv', '.git', '__pycache__', 'proto', 'build', 'modal_proto']
ignore = ['E501', 'E741']
select = ['E', 'F', 'W', 'I']
line-length = 120

[tool.ruff.per-file-ignores]
"*_test.py" = ['E712']
"test/supports/notebooks/*.py" = ['E402']

[tool.ruff.isort]
combine-as-imports = true
known-first-party = [
    "mirageml",
    "mirageml_version",
]
